# claude-worker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.cwork/tickets/: INDEX.md
claude_worker/: __init__.py  __main__.py  cli.py  commit_checker.py  compaction_detector.py  context_threshold.py  cwd_guard.py  identity_reinjector.py  manager.py  permission_grant.py  project_registry.py  thread_store.py  ticket_lifecycle.py  ticket_watcher.py  token_tracking.py
claude_worker/hooks/: session-uuid-env-injection.sh
claude_worker/identities/: pm-wrapup.md  pm.md  technical-lead.md  tl-wrapup.md
claude_worker/migrations/: 001-roles-directory-rename.sh
claude_worker/references/: ai-driven-development.md
docs/: architecture.md
tests/: conftest.py  stub_claude.py  stub_claude.sh  test_archive_metadata.py  test_atomic_write.py  test_broadcast.py  test_chat_routing.py  test_claudecode_env.py  test_cleanup.py  test_commit_checker.py  test_compaction_detection.py  test_compaction_resilience.py  test_context_threshold.py  test_cwork_monitor.py  test_discoverability.py  test_end_to_end.py  test_end_to_end_smoke.py  test_ephemeral_notify.py  test_ephemeral_worker.py  test_fifo_pending_status.py  test_foreground.py  test_grant_cli.py  test_hook_script.py  test_identity_config.py  test_identity_drift.py  test_identity_hooks.py  test_install_hook.py  test_interactive_messaging.py  test_internalize_message.py  test_log_reverse_iter.py  test_manager_thread_panic.py  test_message_queue.py  test_migrate.py  test_missing_tag_cap.py  test_notify.py  test_periodic_tasks.py  test_permission_grant.py  test_permission_settings.py  test_project_registry.py  test_queue_response_marker.py  (+37 more)
(+30 files in other folders)
