[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-worker"
version = "0.1.2"
description = "Launch and communicate with Claude Code subprocess workers via named FIFOs"
requires-python = ">=3.11"
dependencies = [
    "claugs>=0.5.0",
]

[project.scripts]
claude-worker = "claude_worker.cli:main"
