[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-worker"
version = "0.1.16"
description = "Launch and communicate with Claude Code subprocess workers via named FIFOs"
requires-python = ">=3.11"
dependencies = [
    "claugs>=0.6.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
claude-worker = "claude_worker.cli:main"

[tool.setuptools.package-data]
claude_worker = ["hooks/*.sh", "identities/*.md", "references/*.md", "skills/*.md", "migrations/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
